--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "test": "ng test"
   },
   "private": true,
+  "type": "module",
   "dependencies": {
     "@angular/animations": "^18.1.0",
     "@angular/common": "^18.1.0",
