--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
     "moment": "^2.30.1",
     "mongoose": "^8.17.0",
     "morgan": "^1.10.1",
+    "nodemailer": "^7.0.6",
     "nodemon": "^3.1.10",
     "stripe": "^18.4.0",
     "validator": "^13.15.15"
